# tlacuilo

./: .gitignore  .release-notes.md  .release-request  README.md  doc.go  go.mod
.github/workflows/: ci.yml  rust.yml  tag-release.yml  tla-proof.yml
ast/: ast.go  example_test.go  print.go
builder/: builder.go  builder_test.go  example_test.go
cfg/: cfg.go  cfg_test.go  example_test.go
docs/: GUIDE.md  PLAN.md
examples/diehard/: main.go
examples/k8scontroller/: README.md  ReplicaController.tla  controller.go  controller_test.go
examples/reconciler/: main.go
parser/: example_test.go  parser.go  parser_test.go
rust/: Cargo.toml  README.md
rust/src/: ast.rs  cfg.rs  lib.rs  parser.rs  printer.rs  scanner.rs  tlc.rs  token.rs  trace.rs  tracecheck.rs  value.rs
rust/tests/: integration.rs
scanner/: example_test.go  scanner.go  scanner_test.go
tlc/: example_test.go  integration_test.go  output.go  output_test.go  result.go  run.go
tlc/testdata/: deadlock.out  liveness.out  success.out  violation.out
token/: example_test.go  ops.go  token.go
trace/: example_test.go  trace.go  trace_test.go
tracecheck/: controller_test.go  example_test.go  mutex_test.go  queue_test.go  recorder.go  spec.go  tracecheck_test.go  validate.go
value/: example_test.go  fromgo.go  fromgo_test.go  itf.go  value.go  value_test.go
